--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site settings
 title: hikazoh's blog
-email: your-email@domain.com
+email: hikazoh
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://hikazoh.github.io/" # the base hostname & protocol for your site
 twitter_username: hikazoh
 github_username:  hikazoh
 
